--- a/code/logic/Cargo.toml
+++ b/code/logic/Cargo.toml
@@ -7,7 +7,5 @@ edition = "2021"
 
 [dependencies]
 serialport = "4.2.0"
-
-[[bin]]
-name = "logic"
-path = "main.rs"
+serde = { version = "1.0.104", features = ["derive"] }
+serde_json = "1.0.48"
