--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,7 @@
 /testing/rust_testing/rust_to_python_communication/target
 /testing/rust_testing/rust_to_python/target
 /testing/rust_testing/rust_serial_communication/target
+/testing/rust_testing/dmx/target
 code/logic/target/
 code/logic/target/debug/.cargo-lock
 /testing/rust_testing/audio_analysis/target
