--- a/code/logic/Cargo.toml
+++ b/code/logic/Cargo.toml
@@ -9,3 +9,6 @@ edition = "2021"
 serde = { version = "1.0.104", features = ["derive"] }
 serde_json = "1.0.48"
 serial2 = "0.1.7"
+dmx = "0.2.1"
+dmx-serial = "0.4.0"
+rand = "0.8.5"
