--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 /testing/rust_testing/rust_to_python/target
 /testing/rust_testing/rust_serial_communication/target
 /testing/rust_testing/dmx/target
+/testing/rust_testing/language/target
 code/logic/target/
 code/logic/target/debug/.cargo-lock
 /testing/rust_testing/audio_analysis/target
