test: ✅ develop custom file format

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@
 code/logic/target/
 code/logic/target/debug/.cargo-lock
 /testing/rust_testing/audio_analysis/target
+/testing/rust_testing/scannerposition_fileformat/target
