feat: 🔥 USB input module style preparation
The input reader is now able to scale for more usb connections to be handled simultaneusly. The connections are NOT distinguished!

--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -1,7 +1,9 @@
 {
     "input": {
-        "button_count": 5,
-        "input_type": 1
+        "input_ports": [
+            "ttyUSB0",
+            "ttyACM0"
+        ]
     },
     "leds": {
         "led_count_per_strip": 150,
