--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -14,12 +14,10 @@
         "led_brightness": 255,
         "led_invert": 0,
         "led_channel": 0,
-        "pixel_offset": 0
+        "pixel_offset": 0,
+        "frame_timing": 34
     },
     "dmx": {
         "scanner_animation_count": 1
-     },
-    "general": {
-        "frame_timing": 34
-    }
+     }
 }
