--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -2,7 +2,7 @@
     "input": {
         "input_ports": [
             "ttyUSB0",
-            "ttyACM0"
+            "ttyUSB1"
         ],
         "baud_rate" : 250000
     },
