refactor: 🔥 pre vacation scanner to dmx fixture

--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -19,6 +19,12 @@
         "frame_timing": 34
     },
     "dmx": {
-        "scanner_animation_count": 1
+        "fixtures": [
+            "Victory Scan",
+            "Victory Scan",
+            "Victory Scan",
+            "Victory Scan",
+            "Victory Scan"
+        ]
      }
 }
