feat: ✨ animation file names are not dymamicaly read from an array in the config

--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -21,6 +21,10 @@
     "dmx": {
         "fixtures": [
             "Victory Scan"
+        ],
+        "animations":[
+            "test",
+            "square"
         ]
      }
 }
