--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@
 /testing/rust_testing/rust_serial_communication/target
 /testing/rust_testing/dmx/target
 /testing/rust_testing/language/target
+/testing/rust_testing/ui/target
 code/logic/target/
 code/logic/target/debug/.cargo-lock
 /testing/rust_testing/audio_analysis/target
