--- a/code/webinterface/package.json
+++ b/code/webinterface/package.json
@@ -30,5 +30,10 @@
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
-	"type": "module"
+	"type": "module",
+	"dependencies": {
+		"@jonas_focke/svelcon": "^0.4.3",
+		"i": "^0.3.7",
+		"npm": "^9.2.0"
+	}
 }
