--- a/code/webinterface/package.json
+++ b/code/webinterface/package.json
@@ -20,6 +20,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"p5": "^1.5.0",
 		"postcss": "^8.4.20",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -33,7 +34,6 @@
 	"type": "module",
 	"dependencies": {
 		"@jonas_focke/svelcon": "^0.4.3",
-		"i": "^0.3.7",
-		"npm": "^9.2.0"
+		"p5-svelte": "^3.1.2"
 	}
 }
