feat: 🚀 first file exported from tpl builder

--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -16,7 +16,7 @@
     "frame_timing": 34
   },
   "dmx": {
-    "fixtures": ["Victory Scan", "Victory Scan"],
+    "fixtures": ["Victory Scan"],
     "animations": ["test", "square"]
   }
 }
