feat: 🎉 animation directory structure reworked

--- a/code/logic/config.json
+++ b/code/logic/config.json
@@ -17,6 +17,7 @@
   },
   "dmx": {
     "fixtures": ["Victory Scan", "Victory Scan"],
-    "animations": ["test", "square"]
+    "animations": ["test"],
+    "quickanimations": ["square"]
   }
 }
